styles/Home.module.scss
@import "config";

.main {
  display: flex;
  height: 100vh;
}

.main-aside {
  flex: 0.2;
  border-right: 1px solid rgba(0, 0, 0, 0.096);
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
  align-items: center;
  height: 100%;

  @include tablet {
    flex: 0.5;
  }

  .social-icons {
    height: 200px;
    width: 100%;
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    align-items: center;
    margin-bottom: 1rem;
  }

  & > span {
    height: 100px;
    width: 2px;
    background: #303030;
  }
}

.main-right {
  flex: 4;

  .container {
    width: 90%;
    margin: 4rem auto;
    overflow: hidden;
  }

  .code {
    position: absolute;
    bottom: 10px;
    right: 0px;
    width: 350px;

    // Hide svg background on screen < 900px;
    @include tabletL {
      display: none;
    }
  }

  & .container {
    .heading {
      font-family: "Abril Fatface", serif;
      font-size: 4rem;
      line-height: 1.5;
      text-transform: uppercase;
      color: #303030;

      &-inner {
        position: relative;
        overflow: hidden;
      }

      @include mobileL {
        font-size: 2rem;
      }
    }

    .subtitle {
      position: relative;
      overflow: hidden;

      p {
        color: rgba(0, 0, 0, 0.6);
        font-size: 2rem;
        font-family: "Alegreya Sans", sans-serif;

        @include mobileL {
          font-size: 1rem;
        }
      }
    }

    .actions {
      margin-top: 2rem;
      display: flex;

      &-inner {
        position: relative;
        overflow: hidden;
      }

      div:nth-child(2) {
        margin: 0 20px;
      }
    }
  }
}

